# stockScreener

./: .gitignore  README.md  main.py  pyproject.toml
src/stock_screener/: __init__.py  flask_ui.py  massive_pipeline.py  russell1000_loader.py  vwap_screener.py
tests/: test_flask_ui.py  test_massive_pipeline.py  test_russell1000_loader.py  test_vwap_screener.py
