[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-screener"
version = "0.1.0"
requires-python = ">=3.11"

[project.scripts]
load-russell1000 = "stock_screener.russell1000_loader:main"
load-massive-rth-4h = "stock_screener.massive_pipeline:main"
screen-russell1000-vwap = "stock_screener.vwap_screener:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
